--- a/index.html
+++ b/index.html
@@ -6,8 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+
+        <!-- Header banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">HI, I am</h3>
+                <h1 class="banner-title">Rayhan Hossain Sifat</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly 
+                    he. Morning because as to society behaved moments</p>
+                    <button class="btn-primary">Download Cv</button>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
+    </header>
 </body>
 </html>
